--- a/1-classic-grunt/index.html
+++ b/1-classic-grunt/index.html
@@ -7,12 +7,7 @@
   <meta name="description" content="...">
 
   <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,500" rel="stylesheet">
-
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/dropdown.css" rel="stylesheet">
-  <link href="css/tables.css" rel="stylesheet">
-  <link href="css/icons.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="dist/css/style.css" rel="stylesheet">
 
   <script src="js/vendors/modernizr.js"></script>
   <!--[if lt IE 9]><script src="js/vendors/html5_shiv.js"></script><![endif]-->
@@ -24,21 +19,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, praesentium nulla quia quis numquam ipsa! Odit, illum, dolorem, tenetur, expedita amet adipisci doloribus maiores magnam explicabo veritatis quidem quod at.<p>
   </div>
 
-  <!-- Vendors -->
-  <script src="js/vendors/jquery.js"></script>
-  <script src="js/vendors/jquery-migrate.js"></script>
-  <script src="js/vendors/underscore.js"></script>
-  <script src="js/vendors/backbone.js"></script>
-  <script src="js/vendors/jstz.js"></script>
-
-  <!-- Plugins -->
-  <script src="js/plugins/easing.js"></script>
-  <script src="js/plugins/bootstrap.js"></script>
-  <script src="js/plugins/hotkeys.js"></script>
-  <script src="js/plugins/jqdirect.js"></script>
-
-  <!-- App -->
-  <script src="js/app/app.js"></script>
-  <script src="js/app/app-util.js"></script>
+  <!-- Vendors, Plugins, App -->
+  <script src="dist/js/vendors.min.js"></script>
+  <script src="dist/js/plugins.min.js"></script>
+  <script src="dist/js/app.min.js"></script>
 </body>
 </html>
