--- a/1-classic-grunt/index.html
+++ b/1-classic-grunt/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="...">
 
   <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,500" rel="stylesheet">
-  <link href="dist/css/style.css" rel="stylesheet">
+  <link href="dist/css/style.min.css" rel="stylesheet">
 
-  <script src="js/vendors/modernizr.js"></script>
+  <script src="dist/js/modernizr.min.js"></script>
   <!--[if lt IE 9]><script src="js/vendors/html5_shiv.js"></script><![endif]-->
 </head>
 <body>
